# SFMLGame

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.hpp  Bird.hpp  FlappyBird.hpp  Game.hpp  GameObject.hpp  Object.hpp  Pipe.hpp  Random.hpp  Singleton.hpp
src/: Application.cpp  Bird.cpp  FlappyBird.cpp  Game.cpp  GameObject.cpp  Object.cpp  Pipe.cpp
